Reafactor(Reader): Removendo ação que acionar modal  para salvar versiculo favorito.

--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.edevaldocruz.bibleapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ac9d8ce3-0743-4d95-8096-87789d32bbf5"
+      }
     }
   }
 }
